--- a/phone_store/blog/templates/blog/blog.html
+++ b/phone_store/blog/templates/blog/blog.html
@@ -69,8 +69,8 @@
                         </form>
                     </div>
                     {% popular_post %}
-                    {% categories %}
-                    {% tags %}
+                    {% categories category_slug %}
+                    {% tags tag_slug %}
                 </div>
             </div>
         </div>
