--- a/phone_store/store/templates/footer.html
+++ b/phone_store/store/templates/footer.html
@@ -10,14 +10,13 @@
                 <div id="mc_embed_signup" class="subscribe-form subscribe-mrg-1">
                     <form id="mc-embedded-subscribe-form" class="validate subscribe-form-style" novalidate=""
                           target="_blank" name="mc-embedded-subscribe-form" method="post"
-                          action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef">
+                          action="{% url 'new_sub' %}">
+                        {% csrf_token %}
                         <div id="mc_embed_signup_scroll" class="mc-form">
-                            <input class="email" type="email" required="" placeholder="Enter your email address..."
-                                   name="EMAIL" value="">
-                            <div class="mc-news" aria-hidden="true">
-                                <input type="text" value="" tabindex="-1"
-                                       name="b_6bbb9b6f5827bd842d9640c82_05d85f18ef">
-                            </div>
+<!--                            <input class="email" type="email" required="" placeholder="Enter your email address..."-->
+<!--                                   name="EMAIL" value="">-->
+                            {{form_sub.email}}
+
                             <div class="clear">
                                 <input id="mc-embedded-subscribe" class="button" type="submit" name="subscribe"
                                        value="Subscribe">
