--- a/phone_store/store/templates/footer.html
+++ b/phone_store/store/templates/footer.html
@@ -9,7 +9,7 @@
             <div class="col-lg-9">
                 <div id="mc_embed_signup" class="subscribe-form subscribe-mrg-1">
                     <form id="mc-embedded-subscribe-form" class="validate subscribe-form-style" novalidate=""
-                          target="_blank" name="mc-embedded-subscribe-form" method="post"
+                           name="mc-embedded-subscribe-form" method="post"
                           action="{% url 'new_sub' %}">
                         {% csrf_token %}
                         <div id="mc_embed_signup_scroll" class="mc-form">
