store CBV select_related reviews

--- a/phone_store/store/templates/product_header_content.html
+++ b/phone_store/store/templates/product_header_content.html
@@ -51,7 +51,7 @@
 <div id="des-details3" class="tab-pane active">
     <div class="review-wrapper">
         <h2>{{comment_count}} review for {{product.name}}</h2>
-        {% for item in product.comments.all %}
+        {% for item in prod_com %}
         <div class="single-review">
             <div class="review-img">
                 <img src="assets/images/product-details/client-1.jpg" alt="">
