--- a/phone_store/store/templates/store/home.html
+++ b/phone_store/store/templates/store/home.html
@@ -77,7 +77,7 @@
                                         </div>
                                     </div>
                                     <div class="product-content">
-                                        <h4><a href="product-details.html">{{product.name}}</a></h4>
+                                        <h4><a href="{{product.get_absolute_url}}">{{product.name}}</a></h4>
                                         <div class="product-price">
                                             <span class="new-price">{{product.original_price}}₽</span>
                                         </div>
