--- a/phone_store/store/templates/store/shop.html
+++ b/phone_store/store/templates/store/shop.html
@@ -72,7 +72,7 @@
                                     </div>
                                 </div>
                                 <div class="product-content">
-                                    <h4><a href="product-details.html">{{product.name}}</a></h4>
+                                    <h4><a href="{{product.get_absolute_url}}">{{product.name}}</a></h4>
                                     <div class="product-price">
                                         {% if product.sale %}
                                         <span class="old-price">{{product.original_price}} ₽</span>
